Add: 增加定时任务管理模块

--- a/.example.env
+++ b/.example.env
@@ -32,7 +32,7 @@ IS_DEMO=false
 CDN=
 EXAMPLE=true
 
-# 是否开启CSRF过滤 
+# 是否开启CSRF过滤
 IS_CSRF=true
 
 # 静态文件路径前缀
@@ -40,3 +40,9 @@ STATIC_PATH=/static
 
 # OSS静态文件路径前缀
 OSS_STATIC_PREFIX=static_easyadmin
+
+# 定时器安全秘钥
+CRONTAB_SAFE_KEY = Q85gb1ncuWDsZTVoAEvymrNHhaRtp73M
+
+# 定时器请求地址
+CRONTAB_BASE_URI = http://127.0.0.1:9501
