--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "jianyan74/php-excel": "^1.0",
         "zhongshaofa/easy-admin": "^1.0.2",
         "ext-json": "*",
-        "zhongshaofa/thinkphp-log-trace": "^1.0"
+        "zhongshaofa/thinkphp-log-trace": "^1.0",
+        "cshaptx4869/http-crontab": "^1.0",
+        "guzzlehttp/guzzle": "^6.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
