--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
+        "php": ">=7.2.5",
+        "ext-json": "*",
         "topthink/framework": "^6.0.0",
         "topthink/think-orm": "^2.0",
         "topthink/think-multi-app": "^1.0",
@@ -28,14 +29,13 @@
         "alibabacloud/client": "^1.5",
         "jianyan74/php-excel": "^1.0",
         "zhongshaofa/easy-admin": "^1.0.2",
-        "ext-json": "*",
         "zhongshaofa/thinkphp-log-trace": "^1.0",
         "cshaptx4869/http-crontab": "^1.0",
         "guzzlehttp/guzzle": "^6.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
-        "eaglewu/swoole-ide-helper": "dev-master"
+        "topthink/think-trace":"^1.0"
     },
     "autoload": {
         "psr-4": {
