Fix: 修复tp6.1移除核心对think-filesystem库的依赖导致的上传问题

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "topthink/think-multi-app": "^1.0",
         "topthink/think-view": "^1.0",
         "topthink/think-captcha": "^3.0",
+        "topthink/think-filesystem": "^2.0",
         "aliyuncs/oss-sdk-php": "^2.3",
         "qcloud/cos-sdk-v5": "^2.0",
         "qiniu/php-sdk": "^7.2",
