Mod: 去除.example.env中的无用配置

--- a/.example.env
+++ b/.example.env
@@ -28,10 +28,6 @@ CAPTCHA=false
 # 是否为演示环境
 IS_DEMO=false
 
-# CDN配置项组
-CDN=
-EXAMPLE=true
-
 # 是否开启CSRF过滤
 IS_CSRF=true
 
@@ -42,7 +38,7 @@ STATIC_PATH=/static
 OSS_STATIC_PREFIX=static_easyadmin
 
 # 定时器安全秘钥
-CRONTAB_SAFE_KEY = Q85gb1ncuWDsZTVoAEvymrNHhaRtp73M
+CRONTAB_SAFE_KEY=Q85gb1ncuWDsZTVoAEvymrNHhaRtp73M
 
 # 定时器请求地址
-CRONTAB_BASE_URI = http://127.0.0.1:9501
+CRONTAB_BASE_URI=http://127.0.0.1:9501
